--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -35,17 +35,30 @@
         android:text="@string/app_para"/>
     <Button
         android:id="@+id/basic"
+        android:background="@color/basic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
         android:layout_below="@+id/app_para"
         android:text="@string/basic"
+        android:textColor="@color/basicText"
         android:onClick="launchBasic"/>
     <Button
         android:id="@+id/advance"
+        android:background="@color/advance"
+        android:layout_marginTop="13dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/basic"
         android:text="@string/advance"
+        android:textColor="@color/advanceText"
         android:onClick="launchAdvance"/>
+    <TextView
+        android:id="@+id/appversion"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/appversion"
+        android:textColor="#000"/>
 </RelativeLayout>
